Working on MS, intro, discussion, results.

--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -116,9 +116,9 @@ Conceptualizing leadership as a possible solution to problems associated with co
 
 Evolutionary theoretical models and empirical studies often seek to integrate findings within a broad framework of human cultural diversity. The universality of human leadership systems and the incredible diversity among the qualities of leaders across cultures and contexts and the functions leaders serve is difficult to capture. Scholars are then left to haphazardly self-select ethnographic cases or rely on the self-selected reviews of others for generalizations. Here, we provide the first broad and near comprehensive view of the qualities and functions of leaders across human societies from a representative cross-cultural sample. We also provide the first comparative empirical view describing the costs and benefits of leadership for both leaders and followers in an evolutionary biological framework. We also aim to explore how the qualities and functions of leaders vary across social contexts and levels of cultural complexity.
 
-In sum, we aim to empirically and systematically answer the following questions: 1) what are the most frequent qualities of leaders across cultures?; 2) what functions are leaders most commonly serving across cultures?; 3) what are the most salient costs and benefits of leadership for both leaders and followers?; and 4) how does variation across these measures relate to population-level variation?
+In sum, we aim to empirically and systematically accomplish the following four goals: 1) identify the most cross-culturally frequent qualities of leaders and the functions they serve; 2) identify features of the qualities and functions of leaders in reference to theoretical models or novel interpretations; 3) identify the most cross-culturally frequent costs and benefits of leadership for both leaders and followers; and 4) explore relationships between measures of leader qualities and functions with group structure and population-level measures.
 
-We hope these exploratory results will facilitate more fine-grained approaches within leadership studies and greater theoretical and empirical work beyond community leadership, while also revealing the importance of a broad, cross-cultural perspective in understanding the psychology and cultural patterning of perhaps the most foundational component of human social behavior and organization. 
+Such exploratory results stand to facilitate more fine-grained approaches within leadership studies and greater theoretical and empirical work beyond community leadership, while also revealing the importance of a broad, cross-cultural perspective in understanding the psychology and cultural patterning of perhaps the most foundational component of human social behavior and organization. 
 
 
 # Methods
@@ -160,7 +160,7 @@ There are numerous approaches to detecting features in matrix data such as ours,
 
 Prior to analysis we removed all rows that had no evidence for any variable, which resulted in `r nrow(pca_data_qualities)` text records for the leader quality variables and `r nrow(pca_data_functions)` text records for the leader function variables. We used cross-validation to optimize rank, $k$, and a tuning parameter, $m$ (the value to approximate the saturated model), per recommendation of the package authors.
 
-<!-- To idenfity natural groupings of variables among the research coded leader quality and leader function measures, we conducted two cluster anlayses using the pvclust package [@suzuki_pvclust:_2015]. These analyses allow us to interpret *post-hoc* (1) the degree to which coded variables relate to established theoretical models, (2) identify potential phenotypic profiles of leaders, and (3) offer empirical and theoretical future directions related to suites of qualities or functions likely to covary. -->
+<!-- To identify natural groupings of variables among the research coded leader quality and leader function measures, we conducted two cluster analyses using the pvclust package [@suzuki_pvclust:_2015]. These analyses allow us to interpret *post-hoc* (1) the degree to which coded variables relate to established theoretical models, (2) identify potential phenotypic profiles of leaders, and (3) offer empirical and theoretical future directions related to suites of qualities or functions likely to covary. -->
 
 We also performed hierarchical cluster analysis on our quality and function variables. We computed distance between our binary vectors using both $1-cor(x, y)$ and asymmetric binary distance (Jaccard distance), and agglomerated using the Ward algorithm. We assessed the robustness of the clusters using the pvclust package [@suzuki_pvclust2006], which computes an unbiased probability that a cluster appears in bootstrapped samples. We used 10,000 bootstrapped samples.
 
@@ -204,7 +204,7 @@ p_map
 
 ## Distribution of text records by mode of subsistence and group type
 
-The type of group to which a leader text referred was coded into seven categories. Figure \@ref(fig:groupsex) indicates the proportion of text records that were categorized into each of these groups, broken out by mode of subsistence.
+The type of group to which a leader text referred was coded into seven categories. Figure \@ref(fig:groupsex) indicates the proportion of text records that were categorized into each of these groups, broken out by mode of subsistence. We rely on a modified classification of subsistence from the HRAF, collapsing “hunter-gatherers” and “primarily hunter-gatherers” into a single category, “hunter-gatherers,” and by collapsing “agro-pastoralists” and “pastoralists” into a single “pastoralists” category. We renamed the eHRAF’s “Other” subsistence category, which is applied to societies with various combinations of hunting, fishing, gathering, pastoralism, and horticulture or intensive agriculture, as “mixed.” This produced a subsistence classification with five groups: Hunter-gatherers, Pastoralists, Horticulturalists, Agriculturalists, and Mixed.
 
 ```{r groupsex, fig.width=20, fig.height=10, fig.cap="The distribution of text records by subsistence and group type. Areas of the bars are proportional to the number of text records in that category."}
 plot_group_subsis #+ plot_group_sex
@@ -213,7 +213,7 @@ plot_group_subsis #+ plot_group_sex
 
 ## Variable distributions
 
-For each of the `r length(c(quality_vars, function_vars, leader_cost_vars, leader_benefit_vars, follower_benefit_vars, follower_cost_vars))` coded variables (see Tables \@ref(tab:qualfuncvars) and \@ref(tab:costbenefitvars) ), we computed the percentage of text records that provided support, estimating standard errors using a binomial generalized linear mixed effects model with a random intercept for author nested within culture. See Figure \@ref(fig:varsupport).
+For each of the `r length(c(quality_vars, function_vars, leader_cost_vars, leader_benefit_vars, follower_benefit_vars, follower_cost_vars))` coded variables (see Tables \@ref(tab:qualfuncvars) and \@ref(tab:costbenefitvars) ), we computed the percentage of text records that provided support, estimating standard errors using a binomial generalized linear mixed effects model with a random intercept for author nested within culture (which partially accounts for potential variation due to differences in ethnographers such as gender, nationality, or philosophy). See Figure \@ref(fig:varsupport).
 
 ```{r varsupport, fig.width=15, fig.height=15, fig.cap="Support for each coded variable of leader functions (top) and qualities (bottom). Blue circles: percent of text records with evidence of support (95% CI computed with a binomial mixed effects models with random intercept for author nested within culture). Red triangles: percent of cultures with evidence of support (95% CI computed with a cluster bootstrap)."}
 plot.variable.support
@@ -241,7 +241,7 @@ The leader functions cluster analysis (Figure \@ref(fig:cluster)B) also identifi
 
 ## Principle components analyses
 
-A logistic PCA on the `r length(quality_vars)` coded leader quality variables, with rank $k = `r dim(logpca_model_qualities$U)[2]`$ and  $m = `r logpca_model_qualities$m`$ optimized by cross-validation, explained `r signif(logpca_model_qualities$prop_deviance_expl, 3)*100`% of the deviance. We draw on the first two leader quality components for interpretation and additional analyses (see Figure \@ref(fig:qualitiesPCplot)). We identify the first component (PC1) as a *Prestige vs. Dominance* measure. Low values on Leader Qualities PC 1 are strongly associated with the variables *Experienced/accomplished* and *Knowledgeable/intelligence* and moderately associated with *Confidence* and *Bravery*. High values are strongly associated with *Polygnous* and *Authority* and moderately associated with *High quality spouse*. Therefore, the "dominance" side of the *Prestige vs. Dominance* component is also closely liked to reproduction, as demonstrated in the cluster analysis (Figure \@ref(fig:cluster)). Measures of physical formidability and aggressiveness are also moderately associated with the "dominance" side of this component. The second leader qualities component we identify as an *In-group favoritism vs. Social Status* measure. Low values on Leader Qualities PC 2 are strongly associated with *Aggressiveness*, *Bravery*, *Xenophobia*, and *Loyalty*. High Values are strongly associated with *High status* and moderately associated with *Fairness*, *Age*, and *Decisiveness/decision-making*. Therefore, Leader Qualities PC 2 also reflects elements of a presetige-dominance distinction in contrasting aggressiveness with high social status.
+A logistic PCA on the `r length(quality_vars)` coded leader quality variables, with rank $k = `r dim(logpca_model_qualities$U)[2]`$ and  $m = `r logpca_model_qualities$m`$ optimized by cross-validation, explained `r signif(logpca_model_qualities$prop_deviance_expl, 3)*100`% of the deviance. We draw on the first two leader quality components for interpretation and additional analyses (see Figure \@ref(fig:qualitiesPCplot)). We identify the first component (PC1) as a *Prestige vs. Dominance* measure. Low values on Leader Qualities PC 1 are strongly associated with the variables *Experienced/accomplished* and *Knowledgeable/intelligence* and moderately associated with *Confidence* and *Bravery*. High values are strongly associated with *Polygnous* and *Authority* and moderately associated with *High quality spouse*. Therefore, the "dominance" side of the *Prestige vs. Dominance* component is also closely liked to reproduction, as demonstrated in the cluster analysis (Figure \@ref(fig:cluster)). Measures of physical formidability and aggressiveness are also moderately associated with the "dominance" side of this component. The second leader qualities component we identify as an *In-group favoritism vs. Social Status* measure. Low values on Leader Qualities PC 2 are strongly associated with *Aggressiveness*, *Bravery*, *Xenophobia*, and *Loyalty*. High Values are strongly associated with *High status* and moderately associated with *Fairness*, *Age*, and *Decisiveness/decision-making*. Therefore, Leader Qualities PC 2 also reflects elements of a prestige-dominance distinction in contrasting aggressiveness with high social status.
 
 ```{r qualitiesPCplot, fig.width=15, fig.height=10, fig.cap="Logistic PCA loadings of coded leader qualitiy variables on the first two components. PC 1 is identified as a *Prestige vs. Dominance* component and PC 2 is identified as an *In-group favoritism vs. Social Status* component."}
 logisticPCA_loadings_plot(logpca_model_qualities, data = pca_data_qualities2)
@@ -268,9 +268,11 @@ plot.variable.support_costs_benefits
 
 ## Exploring population-level variation
 
-To explore potential population variation in the *Prestige vs. Dominance* and *In-group favoritism vs. Social Status* leader qualities components and the *Social functions* and *Mediation vs. Organization* leader functions components, we fit a series of hierarchical linear models at the text-level, using nested random effects of document within culture with these components as outcome measures. 
+To explore potential population variation in the *Prestige vs. Dominance* and *In-group favoritism vs. Social Status* leader qualities components and the *Social functions* and *Mediation vs. Organization* leader functions components, we fit four hierarchical linear models at the text-level, using nested random effects of document within culture with each of these components as outcome measures. For predictor variables we relied on our researcher-coded measure of group structure and our modified version of the HRAF subsistence classification (see Figure \@ref(fig:groupsex)). 
 
-For predictor variables we incorporate additional population-level measures. We rely on a modified classification of subsistence from the HRAF, collapsing “hunter-gatherers” and “primarily hunter-gatherers” into a single category, “hunter-gatherers,” and by collapsing “agro-pastoralists” and “pastoralists” into a single “pastoralists” category. We renamed the eHRAF’s “Other” subsistence category, which is applied to societies with various combinations of hunting, fishing, gathering, pastoralism, and horticulture or intensive agriculture, as “mixed.” This produced a subsistence classification with five groups: Hunter-gatherers, Pastoralists, Horticulturalists, Agriculturalists, and Mixed. 
+
+
+<!-- For predictor variables we incorporate additional population-level measures. We rely on a modified classification of subsistence from the HRAF, collapsing “hunter-gatherers” and “primarily hunter-gatherers” into a single category, “hunter-gatherers,” and by collapsing “agro-pastoralists” and “pastoralists” into a single “pastoralists” category. We renamed the eHRAF’s “Other” subsistence category, which is applied to societies with various combinations of hunting, fishing, gathering, pastoralism, and horticulture or intensive agriculture, as “mixed.” This produced a subsistence classification with five groups: Hunter-gatherers, Pastoralists, Horticulturalists, Agriculturalists, and Mixed.  -->
 
 <!-- We drew on the Standard Cross-Cultural Sample (SCCS) database [@murdock_standard_1969] for additional population-level measures, which scores 186 cultures on many qualitative or quantitative variables, such as kinship system, dependence on agriculture, and social stratification. Fifty of these cultures are the same as, or very similar to, cultures in the PSF. Specifically, we use the SCCS measures of community size, population density, and cultural complexity. Using these measures as covariates allows us to determine the degree to which, an aggregate measure of cultural complexity, mode of subsistence, or measures of community size and population dispersal most strongly impact the qualities and functions of leaders. We also include our researcher coded measure of group structure (See Table X) as a predictor.   -->
 
@@ -281,7 +283,17 @@ For predictor variables we incorporate additional population-level measures. We 
 
 # Discussion
 
+Results of the current study represent the broadest and most comprehensive view of the qualities of leaders, (e.g., what types of people occupy leadership roles?), the functions of leaders, (e.g., what do leaders do?), and the costs and benefits of leadership for both leaders and followers, across a diverse and culturally representative sample of the ethnographic record. These results suggest universal dimensions of human leadership while also suggesting important variation by group type, subsistence strategy, and sex of the leader.  
+
+## The universality of human leadership systems
+
+Across a broad range of cultures and social contexs leaders are nearly universally high status males described as knoweldage or intelligent who are experienced and have a demonstrated history of previous accomplishments or special skills. They most frequently resolve conflicts within their respective groups while also providing important social functions, organizign cooperation among followers, and providing counsel or input in followers' affairs. 
+
+
+
 ## Limitations 
+
+This study is based on the ethnographic record. Our methods are designed to capture a broad range of ethnographic descriptions from a culturally representative, systematic sample. Nonetheless, these results are conditional upon the content ethnographers chose to discuss. The ethnographic record is certainly an imperfect source of information on human cultural diversity and hence a limitation of the current results. We, however, view the existence of the ethnographic record and the availability and functionality of the eHRAF as an enormous benefit for comparative research, given many of the populations represented in these data no longer exist or live as they did during the time of much ethnographic description. Within these ethnographic descriptions there is a general male bias, which could reflect a male bias in community leadership or the more systemic male bias in the ethnographic record. These data are also biased towards cultural models (rather than descriptions of observed behavior) and community leadership; descriptions of kin group and residential group leadership are less frequent.
 
 
 
