--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -117,10 +117,9 @@ Conceptualizing leadership as a possible solution to problems associated with co
 
 Evolutionary theoretical models and empirical studies often seek to integrate findings within a broad framework of human cultural diversity. The universality of human leadership systems and the incredible diversity among the qualities of leaders across cultures and contexts and the functions leaders serve is difficult to capture. Scholars are then left to haphazardly self-select ethnographic cases or rely on the self-selected reviews of others for generalizations. Here, we provide the first broad and near comprehensive view of the qualities and functions of leaders across human societies from a representative cross-cultural sample. We also provide the first comparative empirical view describing the costs and benefits of leadership for both leaders and followers in an evolutionary biological framework. We also aim to explore how the qualities and functions of leaders vary across social contexts and levels of cultural complexity.
 
-In sum, we aim to empirically and systematically answer the following questions: 1) what are the most frequent qualities of leaders across cultures?; 2) what functions are leaders most commonly serving across cultures?; 3) what are the most salient costs and benefits of leadership for both leaders and followers?; and 4) how does variation across these measures relate to population-level variation?
+In sum, we aim to empirically and systematically answer the following questions: 1) what are the most frequent qualities of leaders across cultures? 2) What functions are leaders most commonly serving across cultures?; 3) What "features" exist in our data, e.g., do particular variables tended to covary or cluster together? Such features might lend support to existing theories; for instance they might correspond to "prestige" and "dominance" [@henrich_evolution_2001]. Or they might suggest new and theoretically important dimensions of leadership. 4) What are the most salient costs and benefits of leadership for both leaders and followers? And 5) how does variation across these measures relate to population-level variation?
 
 We hope these exploratory results will facilitate more fine-grained approaches within leadership studies and greater theoretical and empirical work beyond community leadership, while also revealing the importance of a broad, cross-cultural perspective in understanding the psychology and cultural patterning of perhaps the most foundational component of human social behavior and organization. 
-
 
 # Methods
 
@@ -153,21 +152,17 @@ For additional details on ethnographic sampling and creating of the leadershipda
 
 ## Statistical analysis
 
-We analyzed data from our researcher-coded operationalized variables at the text-record level and at the culture-level. Our first goal was to assess the proportion of text records and cultures that provided evidence for each of our coded variables to discover the qualities, functions, benefits and costs of leadership that are most and least frequently noted in the ethnographic record.
+We analyzed data from our researcher-coded operationalized variables at the text-record level and at the culture-level. Our first goal was to assess the proportion of text records and cultures that provided evidence for each of our coded variables to discover the qualities, functions, benefits and costs of leadership that are most and least frequently noted in the ethnographic record. We computed confidence intervals for the proportion of text records supporting each variable using generalized linear mixed effects models and random intercepts based on document authors nested within cultures. We computed confidence intervals for the proportion of cultures with evidence for each variable using a cluster bootstrap. 
 
-Our second goal was to discover "features" in our data, e.g., to determine if particular variables tended to covary or cluster together. Such features might lend support to existing theories; for instance they might correspond to "prestige" and "dominance" [@henrich_evolution_2001]. Or they might suggest new and theoretically important dimensions of leadership. 
+We then explored "features" in our data. There are numerous approaches to detecting features in matrix data such as ours, many of which employ various dimensionality reduction and clustering techniques. We used hierarchical cluster analysis on our quality and function variables. We computed distance between our binary vectors using both $1-cor(x, y)$ and asymmetric binary distance (Jaccard distance), and agglomerated using the Ward algorithm. We assessed the robustness of the clusters using the pvclust package [@suzuki_pvclust2006], which computes an unbiased probability that a cluster appears in bootstrapped samples. We used 10,000 bootstrapped samples.
 
-There are numerous approaches to detecting features in matrix data such as ours, many of which employ various dimensionality reduction and clustering techniques. To reduce the dimensionality of the `r length(quality_vars)` leader quality variables and the `r length(function_vars)` leader function variables, all of which take binary values (0, 1), we used logistic PCA from the logisticPCA package. This algorithm projects the natural parameters of the saturated model onto the lower $k-$dimension space that minimizes the Bernoulli deviance [@logisticPCA].
-
-Prior to analysis we removed all rows that had no evidence for any variable, which resulted in `r nrow(pca_data_qualities)` text records for the leader quality variables and `r nrow(pca_data_functions)` text records for the leader function variables. We used cross-validation to optimize rank, $k$, and a tuning parameter, $m$ (the value to approximate the saturated model), per recommendation of the package authors.
+<!-- To reduce the dimensionality of the `r length(quality_vars)` leader quality variables and the `r length(function_vars)` leader function variables, all of which take binary values (0, 1), we used logistic PCA from the logisticPCA package. This algorithm projects the natural parameters of the saturated model onto the lower $k-$dimension space that minimizes the Bernoulli deviance [@logisticPCA]. Prior to analysis we removed all rows that had no evidence for any variable, which resulted in `r nrow(pca_data_qualities)` text records for the leader quality variables and `r nrow(pca_data_functions)` text records for the leader function variables. We used cross-validation to optimize rank, $k$, and a tuning parameter, $m$ (the value to approximate the saturated model), per recommendation of the package authors. -->
 
 <!-- To idenfity natural groupings of variables among the research coded leader quality and leader function measures, we conducted two cluster anlayses using the pvclust package [@suzuki_pvclust:_2015]. These analyses allow us to interpret *post-hoc* (1) the degree to which coded variables relate to established theoretical models, (2) identify potential phenotypic profiles of leaders, and (3) offer empirical and theoretical future directions related to suites of qualities or functions likely to covary. -->
 
-We also performed hierarchical cluster analysis on our quality and function variables. We computed distance between our binary vectors using both $1-cor(x, y)$ and asymmetric binary distance (Jaccard distance), and agglomerated using the Ward algorithm. We assessed the robustness of the clusters using the pvclust package [@suzuki_pvclust2006], which computes an unbiased probability that a cluster appears in bootstrapped samples. We used 10,000 bootstrapped samples.
+Our third goal was to determine which leader and follower benefits and costs were most commonly mentioned in the ethnographic record, computing 95% CIs as above.
 
-Our third goal was to determine which leader and follower benefits and costs were most commonly mentioned in the ethnographic record.
-
-Our fourth goal was to explore associations between the principle components of leader qualities and functions, and culture-level variables such as mode of subsistence, social complexity, population density, and group size. We used linear mixed effects models from the lme4 package [@bates2015], with PC1 and PC2 as outcome variables, culture-level variables as predictors, and documents nested within cultures as grouping variables for random intercepts. 
+Our fourth goal was to explore associations between the most common leader qualities and functions, and culture-level variables such as mode of subsistence, social complexity, population density, and group size. We used linear mixed effects models from the lme4 package [@bates2015], with common qualities and functions as outcome variables, culture-level variables as predictors, and documents nested within cultures as grouping variables for random intercepts. 
 
 All analyses were conducted with `r R.version.string`.
 
