Minor edits to exploratory model plots.
Working on MS.

Added visreg exploratory model effects plots to MS to visualize effects. Might remove these plots/analyses prior to submission.

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -1476,6 +1476,21 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 }
 
 
+@article{cheng_dominance_2019,
+	title = {Dominance, {Prestige}, and the {Role} of {Leveling} in {Human} {Social} {Hierarchy} and {Equality}},
+	issn = {2352-250X},
+	url = {http://www.sciencedirect.com/science/article/pii/S2352250X19301836},
+	doi = {10.1016/j.copsyc.2019.10.004},
+	abstract = {How humans and other social species form social hierarchies is one of the oldest puzzles of the behavioral and biological sciences. Considerable evidence now indicates that in humans social stratification is principally based jointly on dominance (coercive capacity based on strength, threat, and intimidation) and prestige (persuasive capacity based on skills, abilities, and knowledge). Although intimidation can beget compliance, hierarchical relationships based on dominance are relatively less stable. Here, I consider the costs and benefits of each form of hierarchical structure for high- and low-ranking individuals, and propose that humans have evolved a tolerance for stratification based on prestige and a resistance towards coercive dominance. In humans (and other social primates), anti-dominance instincts often escalate into large-scale coordinated leveling efforts to suppress the power of coercive aggrandizers. By contrast, prestige, which produces mutually beneficial outcomes with followers, is recognized and widely endorsed.},
+	language = {en},
+	urldate = {2019-11-22},
+	journal = {Current Opinion in Psychology},
+	author = {Cheng, Joey T},
+	month = oct,
+	year = {2019},
+	file = {ScienceDirect Snapshot:/Users/zgarf/Zotero/storage/U3MX2BTX/S2352250X19301836.html:text/html}
+}
+
 @article{smith_obstacles_2018,
 	title = {Obstacles and opportunities for female leadership in mammalian societies: {A} comparative perspective},
 	issn = {1048-9843},
@@ -2670,7 +2685,7 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	abstract = {Long before the term Machiavellian Intelligence was coined, James Neel was pondering the role of ‘princes’ in the evolution of exceptional human intelligence.  The two cornerstones of Neel’s theory – leaders’ superior skills, knowledge, and intelligence (at least as judged by others), and their greater reproductive success – have been amply confirmed by subsequent research.  Neither Neel nor later theorists, however, have adequately explained  why  knowledgeable,  intelligent  leaders  are  attractive  both  to  followers  and  to  mates.  We  aim to  fill  this  gap  by  operationalizing  leaders  as  individuals  who  regularly  make  decisions  that  benefit  most members of the group.  Because human nuclear families comprise two unrelated individuals who cooperatefor twenty years or more to raise their joint offspring,  and because families are nested within subsistence groups, which, in turn, are nested within larger security and political groups, good decision-making skills will  provide  large  benefits  to  mates  as  well  as  to  members  of  one’s  subsistence  group  or  larger  security and political groups.  We further argue that decision-making that benefits others as well as oneself (JUO) can be especially computationally complex, and therefore that sexual selection and biological market forces favoring  these  skills  would  favor  increased  brain  size.  Finally,  because  parents  must  make  decisions  for their cognitively immature offspring, good JUO and other leadership abilities might have initially undergone strong selection in mothers, who provide most of the childcare in natural fertility populations. Decision-making that benefits others is one example of a valuable computational service. Other important examples include threat and opportunity detection, gossip and information sharing, cultural transmission, story telling, medicinal knowledge, and advice and counsel.  Providing computational services in exchange for a variety of benefits would have helped subsidize a large, energetically expensive brain.  Individuals who provided particularly valuable services gained prestige, i.e., additional benefits from fellow group members.},
 	urldate = {2019-05-21},
 	institution = {Open Science Framework},
-	author = {Hagen, Edward H and Garfield, Zachary},
+	author = {Hagen, Edward H. and Garfield, Zachary H.},
 	year = {2019},
 	doi = {10.31219/osf.io/9bcdk}
 }
