--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -31,7 +31,7 @@ Leadership in WEIRD settings often differs substantially from non-WEIRD settings
 
 Across human societies, the influence of leaders stands to substantially shape the nature of group structure and group outcomes. Simultaneously, social norms, pressures from competing leaders or rival or cooperative groups, and followers preferences can greatly constrain a leader's agenda. The interactions between the strategies of individual leaders, pressures of followership, and group dynamics are likely to strongly contribute to organizational variation across human populations including social and economic trajectories [@wiessner_risk_1982] and cultural evolutionary processes [@henrich_big_2015]. 
 
-Leadership and followership are critical in understanding group structure and have been the focus of much scientific attention across psychology, sociology, political science, and managerial studies. Until recently, this very large body of work was relatively disconnected from approaches to leadership in anthropology and biology. Under a unifying evolutionary framework, social and biological scientists have now produced a sizable body of theory on the evolution and cross-cultural patterning of leadership and followership [e.g., @henrich_big_2015; @richerson_tribal_2009; @van_vugt_evolutionary_2006; @pietraszewski_evolution_2019; @hooper_theory_2010; @kaplan_evolutionary_2009; @von_rueden_roots_2014], accompanied by a growing body of empirical results [e.g., @bowser_womens_2010; @cheng_two_2013; @garfield_investigating_2019; @garfield_evolutionary_2019; @von_rueden_leadership_2014; @von_rueden_sex_2018; @smith_leadership_2016]. This integration as been informative. Drawing on the study of leadership in evolutionary perspective and across diverse, small-scale and traditional societies can help develop more generalizable theories and offer applications to shape organizational structure in ways which are more consistent with human evolutionary history and evolved leader-follower psychologies [@von_rueden_leadership_2015; @garfield_review_2019]. Nonetheless, much of this work has focused on community or political leaders, often overlooking the nature of leadership and followership across social domains and at all levels of social organization. Moreover, while the benefits leaders accrue for their services have received substantial attention the costs of leadership for both leaders and followers have also been relatively under-investigated. Current outstanding questions for evolutionary leadership scholars include the degree to which the nature of leadership is shaped by population-level variation and the costs and benefits leaders and followers incur across distinct leadership systems. 
+Leadership and followership are critical in understanding group structure and have been the focus of much scientific attention across psychology, sociology, political science, and managerial studies. Until recently, this very large body of work was relatively disconnected from approaches to leadership in anthropology and biology. Under a unifying evolutionary framework, social and biological scientists have now produced a sizable body of theory on the evolution and cross-cultural patterning of leadership and followership [e.g., @price_evolution_2014; @henrich_big_2015; @richerson_tribal_2009; @van_vugt_evolutionary_2006; @pietraszewski_evolution_2019; @hooper_theory_2010; @kaplan_evolutionary_2009; @von_rueden_roots_2014; @hagen_leadership_2019], accompanied by a growing body of empirical results [e.g., @bowser_womens_2010; @cheng_two_2013; @garfield_investigating_2019; @garfield_evolutionary_2019; @von_rueden_leadership_2014; @von_rueden_sex_2018; @smith_leadership_2016; @smith_obstacles_2018]. This integration as been informative. Drawing on the study of leadership in evolutionary perspective and across diverse, small-scale and traditional societies can help develop more generalizable theories and offer applications to shape organizational structure in ways which are more consistent with human evolutionary history and evolved leader-follower psychologies [@von_rueden_leadership_2015; @garfield_review_2019]. Nonetheless, much of this work has focused on community or political leaders, often overlooking the nature of leadership and followership across social domains and at all levels of social organization. Moreover, while the benefits leaders accrue for their services have received substantial attention the costs of leadership for both leaders and followers have also been relatively under-investigated. Current outstanding questions for evolutionary leadership scholars include the degree to which the nature of leadership is shaped by population-level variation and the costs and benefits leaders and followers incur across distinct leadership systems. 
 
 Evolutionary scholars typically define leaders as individuals who maintain disproportionate influence over decision-making within groups [@von_rueden_leadership_2015], whatever the group may be. Leadership roles are also often associated with specific rights and responsibilities. Not surprisingly, the functions leaders serve then are often closely linked to group contexts and the salient challenges groups face. Certain types of groups, such as kin groups, economic groups, or political groups, may tend to favor leaders with specific qualities, however there can be substantial variation in the traits of leaders within these groups as well as between them.
 
@@ -286,10 +286,31 @@ To explore potential population variation in the *Prestige vs. Dominance* and *I
 
 <!-- We drew on the Standard Cross-Cultural Sample (SCCS) database [@murdock_standard_1969] for additional population-level measures, which scores 186 cultures on many qualitative or quantitative variables, such as kinship system, dependence on agriculture, and social stratification. Fifty of these cultures are the same as, or very similar to, cultures in the PSF. Specifically, we use the SCCS measures of community size, population density, and cultural complexity. Using these measures as covariates allows us to determine the degree to which, an aggregate measure of cultural complexity, mode of subsistence, or measures of community size and population dispersal most strongly impact the qualities and functions of leaders. We also include our researcher coded measure of group structure (See Table X) as a predictor.   -->
 
+Functions PC 1 model
 
-```{r, fig.height=20, fig.width=9}
-# qc_bayes_model_post_plot
+```{r funcPCmodel1, fig.height=8, fig.width=20}
+m_fPC1_sub_plot + m_fPC1_group_plot
 ```
+
+Functions PC 2 model
+
+```{r funcPCmodel2, fig.height=10, fig.width=20}
+m_fPC2_sub_plot + m_fPC2_group_plot
+```
+
+Qualities PC 1 model
+
+```{r qualPCmodel1, fig.height=10, fig.width=20}
+m_qPC1_sub_plot + m_qPC1_group_plot
+```
+
+Qualities PC 2 model 
+
+```{r qualPCmodel2, fig.height=10, fig.width=20}
+m_qPC2_sub_plot + m_qPC2_group_plot
+```
+
+
 
 # Discussion
 
@@ -301,9 +322,9 @@ Across a broad range of cultures and social contexts leaders are nearly universa
 
 At all subsistence levels leaders emerge across a broad range of group types, including at lower-order social units such as within residential groups and kin groups; within specialized groups such as religous, economic, or military groups; and in political contexts at the community level and beyond. Political leadership at the commmunity level is widespread across all subsistence categories. Economic, military, and religious group leadership, although relatively less frequent, are fairly consistently represented across subsistence levels. See Figure \@ref(fig:groupsex).
 
-## The cultural dependancy of human leadership
+## The cultural and context dependancy of human leadership
 
-The distribiution of text records by group type and subsistence suggests leaders emerge within similar social domains among populations within varied subsistance strategies, but at variable frequencies. Hunter-gatherers and pastoralists, populations more likely to expeirence high residential mobility exhibited greater relative frequencies of leaderhsip wtihin residential groups and kin groups. Pastoralists, however, rely in part on a highly defensible resource base (i.e., livestock) and exhibit leadership beyond the community mores o than hunter-gatherers and on par with horticulturalists. Both pastoralists and horticulturalists are known for elevated rates of inter-group conflict relative to mobile hunter-gatherers and these results are consistent with a relationship between increased inter-group conflict and more elaboratored political leadership systems.
+The distribiution of text records by group type and subsistence suggests leaders emerge within similar social domains among populations within varied subsistance strategies, but at variable frequencies. Hunter-gatherers and pastoralists, populations more likely to expeirence high residential mobility, exhibited greater relative frequencies of leaderhsip wtihin residential groups and kin groups. Pastoralists, however, rely in part on a highly defensible resource base (i.e., livestock) and exhibit leadership beyond the community more so than hunter-gatherers and on par with horticulturalists. Pastoral and horticultural populations are often experience elevated rates of inter-group conflict relative to mobile hunter-gatherers and these results are consistent with a relationship between increased inter-group conflict and more elaboratored political leadership systems.
 
 Figure \@ref(fig:groupsex) is consistent with a negative relationships between political leadership at the community leadership or above and leadership in kin groups or residential groups. One possible interpretation is that as political structures become more instituionalized and economic systems transcend the household, leadership within households and residental groups errodes. It is interesting, however, that even among the agricultural populations that are charachterized by leadership systems beyong the community level, leadership within residential and family group persists.
 
@@ -320,6 +341,8 @@ Figure \@ref(fig:groupsex) is consistent with a negative relationships between p
 ## Limitations 
 
 This study is based on the ethnographic record. Our methods are designed to capture a broad range of ethnographic descriptions from a culturally representative, systematic sample. Nonetheless, these results are conditional upon the content ethnographers chose to discuss. The ethnographic record is certainly an imperfect source of information on human cultural diversity and hence a limitation of the current results. We, however, view the existence of the ethnographic record and the availability and functionality of the eHRAF as an enormous benefit for comparative research, given many of the populations represented in these data no longer exist or live as they did during the time of much ethnographic description. Within these ethnographic descriptions there is a general male bias, which could reflect a male bias in community leadership or the more systemic male bias in the ethnographic record. These data are also biased towards cultural models (rather than descriptions of observed behavior) and community leadership; descriptions of kin group and residential group leadership are less frequent. The high proportion of text records discussing political group leaders could be attributable to our broad search strategy or the content of the ethnographic record of "leadership" more generally. 
+
+# Conclusion
 
 
 
