Working on MS, all sections.
Updated variables definition tables.

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -66,19 +66,22 @@
 	note = {OCLC: 14932811}
 }
 
+
 @article{hames_pacifying_2019,
 	title = {Pacifying {Hunter}-{Gatherers}},
+	volume = {30},
 	issn = {1936-4776},
 	url = {https://doi.org/10.1007/s12110-019-09340-w},
 	doi = {10.1007/s12110-019-09340-w},
 	abstract = {There is a well-entrenched schism on the frequency (how often), intensity (deaths per 100,000/year), and evolutionary significance of warfare among hunter-gatherers compared with large-scale societies. To simplify, Rousseauians argue that warfare among prehistoric and contemporary hunter-gatherers was nearly absent and, if present, was a late cultural invention. In contrast, so-called Hobbesians argue that violence was relatively common but variable among hunter-gatherers. To defend their views, Rousseauians resort to a variety of tactics to diminish the apparent frequency and intensity of hunter-gatherer warfare. These tactics include redefining war, censoring ethnographic accounts of warfare in comparative analyses, misconstruing archaeological evidence, and claiming that outside contact inflates the intensity of warfare among hunter-gatherers. These tactics are subject to critical analysis and are mostly found to be wanting. Furthermore, Hobbesians with empirical data have already established that the frequency and intensity of hunter-gatherer warfare is greater compared with large-scale societies even though horticultural societies engage in warfare more intensively than hunter-gatherers. In the end I argue that although war is a primitive trait we may share with chimpanzees and/or our last common ancestor, the ability of hunter-gatherer bands to live peaceably with their neighbors, even though war may occur, is a derived trait that fundamentally distinguishes us socially and politically from chimpanzee societies. It is a point often lost in these debates.},
 	language = {en},
+	number = {2},
 	urldate = {2019-05-15},
 	journal = {Human Nature},
 	author = {Hames, Raymond},
-	month = apr,
 	year = {2019},
-	keywords = {War, Chimpanzees, Hunter-gatherers, Comparative research, Peace}
+	keywords = {War, Chimpanzees, Hunter-gatherers, Comparative research, Peace},
+	pages = {155--175}
 }
 
 
@@ -197,7 +200,115 @@
 	file = {The%20evolutionary%20and%20ecologica:/Users/zgarf/Zotero/storage/E3ZS33IM/The evolutionary and ecologica.pdf:application/pdf}
 }
   
-  
+
+@article{lukaszewski_extraversion_2015,
+	title = {The extraversion continuum in evolutionary perspective: {A} review of recent theory and evidence},
+	volume = {77},
+	journal = {Personality and Individual Differences},
+	author = {Lukaszewski, Aaron W. and von Rueden, Christopher R.},
+	year = {2015},
+	keywords = {Jepson, Leadership, Personality},
+	pages = {186--192},
+	annote = {The following values have no corresponding Zotero field:publisher: Elsevierissn: coden: doi: citation-id: Lukaszewski 2015amodified-date: 2017-12-21 17:01:13 +0700},
+	file = {The%20extraversion%20continuum%20in:/Users/zgarf/Zotero/storage/5ZAZGWK8/The extraversion continuum in.pdf:application/pdf}
+} 
+
+@article{hogan_personality_2020,
+	title = {Personality theory and the nature of human nature},
+	volume = {152},
+	issn = {0191-8869},
+	url = {http://www.sciencedirect.com/science/article/pii/S0191886919304933},
+	doi = {10.1016/j.paid.2019.109561},
+	abstract = {Personality theory concerns the nature of human nature and is the foundation for any discipline based on assumptions about human motivation (e.g., Anthropology, Economics, Political Science). Despite its central importance, personality theory has been marginalized in modern psychology. This survey of personality theory makes six points. First, personality theory is crucial for understanding life. Second, life itself is largely about competition. Third, there is competition within groups for individual status, and there is competition between groups for collective survival. Fourth, psychological research focuses on within group competition, but between group competition is ultimately more consequential. Fifth, successful within group competition depends on social skill whereas successful between group competition depends on leadership. And finally, personality determines/explains the outcome of both forms of competition, which takes us back to the beginning.},
+	urldate = {2019-08-24},
+	journal = {Personality and Individual Differences},
+	author = {Hogan, Robert and Sherman, Ryne A.},
+	month = jan,
+	year = {2020},
+	keywords = {Leadership, Evolution, Organizational psychology, Personality theory, Trait theory},
+	pages = {109561},
+	file = {ScienceDirect Full Text PDF:/Users/zgarf/Zotero/storage/FV2TJCCE/Hogan and Sherman - 2020 - Personality theory and the nature of human nature.pdf:application/pdf;ScienceDirect Snapshot:/Users/zgarf/Zotero/storage/BQPZ84UU/S0191886919304933.html:text/html}
+}
+
+@book{wiessner_food_1996,
+	address = {Providence},
+	title = {Food and the status quest: an interdisciplinary perspective},
+	isbn = {978-1-57181-871-3},
+	shorttitle = {Food and the status quest},
+	publisher = {Berghahn Books},
+	editor = {Wiessner, Pauline Wilson and Schiefenhövel, Wulf},
+	year = {1996},
+	keywords = {Developing countries, Food, Food consumption, Food supply, Nutrition, Nutritional anthropology, Requirements}
+}
+
+@article{walker_evolutionary_2011,
+	title = {Evolutionary history of hunter-gatherer marriage practices},
+	volume = {6},
+	language = {English},
+	number = {4},
+	journal = {PLOS ONE},
+	author = {Walker, R. S. and Flinn, M. V. and Ellsworth, R.M and Hill, R.M},
+	year = {2011},
+	note = {OCLC: 724625684}
+}
+
+
+@article{van_vugt_dual_2019,
+	title = {A {Dual} {Model} of {Leadership} and {Hierarchy}: {Evolutionary} {Synthesis}},
+	volume = {23},
+	issn = {1364-6613},
+	shorttitle = {A {Dual} {Model} of {Leadership} and {Hierarchy}},
+	url = {http://www.sciencedirect.com/science/article/pii/S1364661319302232},
+	doi = {10.1016/j.tics.2019.09.004},
+	abstract = {From the popularity of authoritarian political leaders to the under-representation of women in boardrooms, leadership is an important theme in current human social affairs. Leadership is also a prominent research topic in the biological, social, and cognitive sciences. However, these active literatures have evolved somewhat independently and there is a need for synthesis. A comparative-evolutionary approach can integrate seemingly divergent perspectives by making a distinction between two leadership styles, prestige and dominance, that have contrasting expressions, functions, histories, and neural and developmental pathways. The distinction may help to resolve various scientific puzzles, such as: (i) opposing views on the different functions and expressions of leadership; (ii) the appeal of dominance-style leaders; and (iii) sex biases in leadership emergence in modern society.},
+	language = {en},
+	number = {11},
+	urldate = {2019-11-23},
+	journal = {Trends in Cognitive Sciences},
+	author = {Van Vugt, Mark and Smith, Jennifer E.},
+	month = nov,
+	year = {2019},
+	keywords = {dominance, evolution, hierarchy, leadership, prestige},
+	pages = {952--967},
+	file = {ScienceDirect Snapshot:/Users/zgarf/Zotero/storage/YQP96HS2/S1364661319302232.html:text/html}
+}
+
+@article{cheng_dominance_2019,
+	title = {Dominance, {Prestige}, and the {Role} of {Leveling} in {Human} {Social} {Hierarchy} and {Equality}},
+	issn = {2352-250X},
+	url = {http://www.sciencedirect.com/science/article/pii/S2352250X19301836},
+	doi = {10.1016/j.copsyc.2019.10.004},
+	abstract = {How humans and other social species form social hierarchies is one of the oldest puzzles of the behavioral and biological sciences. Considerable evidence now indicates that in humans social stratification is principally based jointly on dominance (coercive capacity based on strength, threat, and intimidation) and prestige (persuasive capacity based on skills, abilities, and knowledge). Although intimidation can beget compliance, hierarchical relationships based on dominance are relatively less stable. Here, I consider the costs and benefits of each form of hierarchical structure for high- and low-ranking individuals, and propose that humans have evolved a tolerance for stratification based on prestige and a resistance towards coercive dominance. In humans (and other social primates), anti-dominance instincts often escalate into large-scale coordinated leveling efforts to suppress the power of coercive aggrandizers. By contrast, prestige, which produces mutually beneficial outcomes with followers, is recognized and widely endorsed.},
+	language = {en},
+	urldate = {2019-11-22},
+	journal = {Current Opinion in Psychology},
+	author = {Cheng, Joey T},
+	month = oct,
+	year = {2019},
+	file = {ScienceDirect Snapshot:/Users/zgarf/Zotero/storage/U3MX2BTX/S2352250X19301836.html:text/html}
+}
+
+@book{winkelman1987cross,
+	title = {A cross-cultural study of magico-religious practitioners and trance states: {Database} ({HRAF} {Research} {Series} in {Quantita}- tive {Cross}-{Cultural} {Data} {III})},
+	url = {doi:10.13140/ RG.2.1.4381.2720},
+	publisher = {Human Relations Area Files},
+	author = {Winkelman, Michael J and White, Douglas},
+	year = {1987}
+}
+
+@article{singh_cultural_2017,
+	title = {The cultural evolution of shamanism.},
+	volume = {2017},
+	issn = {0140-525X},
+	abstract = {Shamans, including medicine-men, mediums, and the prophets of religious movements, recur across human societies. Shamanism also existed among nearly all documented hunter-gatherers, likely characterized the religious lives of many ancestral humans, and is often proposed by anthropologists to be the "first profession", representing the first institutionalized division of labor beyond age and sex. This paper proposes a cultural evolutionary theory to explain why shamanism consistently develops, and in particular, (1) why shamanic traditions exhibit recurrent features around the world, (2) why shamanism professionalizes early, often in the absence of other specialization, and (3) how shifting social conditions affect the form or existence of shamanism. According to this theory, shamanism is a set of traditions developed through cultural evolution that adapts to people's intuitions to convince observers that a practitioner can influence otherwise unpredictable, significant events. The shaman does this by ostensibly transforming during initiation and trance, violating folk-intuitions of humanness to assure group-members that he or she can interact with the invisible forces that control uncertain outcomes. Entry requirements for becoming a shaman persist because the practitioner's credibility depends on them "transforming". This contrasts with dealing with problems that have identifiable solutions (like building a canoe), where credibility hinges on showing results and outsiders can invade the jurisdiction by producing the outcome. Shamanism is an ancient human institution that recurs because of the capacity of cultural evolution to produce practices adapted to innate psychological tendencies.},
+	language = {English},
+	journal = {The Behavioral and brain sciences},
+	author = {Singh, Manvir},
+	year = {2017},
+	note = {OCLC: 7088270783},
+	pages = {1--83},
+	file = {Singh M - 2017 - The cultural evolution of shamanism..pdf:/Users/zgarf/Zotero/storage/DS2LB43L/Singh M - 2017 - The cultural evolution of shamanism..pdf:application/pdf}
+} 
 
 @article{pietraszewski_evolution_2019,
 	title = {The evolution of leadership: {Leadership} and followership as a solution to the problem of creating and executing successful coordination and cooperation enterprises},
@@ -1475,6 +1586,16 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	annote = {doi: 10.1046/j.1439-0310.2001.00672.x}
 }
 
+
+@book{van_vugt_selected_2010,
+	address = {London},
+	title = {Selected: {Why} some people lead, why others follow, and why it matters},
+	publisher = {Profile Books},
+	author = {Van Vugt, Mark and Ahuja, Anjana},
+	year = {2010},
+	keywords = {NSF1, leaderhsip},
+	annote = {The following values have no corresponding Zotero field:issn: coden: doi: electronic-resource-num: citation-id: VanVugt 2010modified-date: 2016-01-14 02:12:17 +0700}
+}
 
 @article{cheng_dominance_2019,
 	title = {Dominance, {Prestige}, and the {Role} of {Leveling} in {Human} {Social} {Hierarchy} and {Equality}},
@@ -4057,16 +4178,6 @@ This article is part of the theme issue ‘Interdisciplinary approaches for unco
 	pages = {533--542}
 }
 
-@article{den_hartog_culture_1999,
-	title = {Culture specific and cross-culturally generalizable implicit leadership theories: {Are} attributes of charismatic/transformational leadership universally endorsed?},
-	volume = {10},
-	number = {2},
-	journal = {The Leadership Quarterly},
-	author = {Den Hartog, Deanne N. and House, Robert J. and Hanges, Paul J. and Ruiz-Quintanilla, S. Antonio and Dorfman, Peter W.},
-	year = {1999},
-	keywords = {Leadership - general, MA\_leadership},
-	pages = {219--256}
-}
 
 @article{deyoung_between_2007,
 	title = {Between facets and domains: 10 aspects of the {Big} {Five}.},
